--- a/src/components/TestCase.css
+++ b/src/components/TestCase.css
@@ -2,7 +2,7 @@
     font-size: 1rem;
 }
 
-input, .Test-case, .Sub-test-case, .Comment, .Tag {
+input, .Test-case-group, .Test-case, .Comment, .Tag {
     width: 80%;
     min-width: 500px;
     margin: auto;
@@ -18,19 +18,19 @@ input:focus {
     border: 2px solid #009EC1;
 }
 
-.Test-case, .Sub-test-case, .Comment, .Tag {
+.Test-case-group, .Test-case, .Comment, .Tag {
     min-width: 500px;
     width: 80%;
     line-height: 24px;
 }
 
-.Test-case {
+.Test-case-group {
     font-size: 1.2rem;
     line-height: 28px;
     text-align: left;
 }
 
-.Sub-test-case {
+.Test-case {
     width: 75%;
     min-width: 420px;
     text-align: left;
