--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,33 @@
 .App {
-  text-align: center;
+  text-align: left;
+}
+
+.Blue-strip {
+  height: 4px;
+  background-color: #06B8E0;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 4s ease-in-out;
-  height: 80px;
+  height: 32px;
+  margin: auto;
 }
 
 .App-header {
-  background-color: #233232;
-  height: 150px;
-  padding: 20px;
+  display: grid;
+  grid-template-columns: 50px auto;
+  background-color: #3B4747;
+  height: 36px;
+  padding: 5px 10px 5px 16px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  display: inline;
+  margin: auto 20px;
+  font-size: 1.6em;
 }
 
 .App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  text-align: center;
+  font-size: 1.1em;
 }
