--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,5 @@
-.App {
+.Header {
   text-align: left;
-}
-
-.Blue-strip {
-  height: 4px;
-  background-color: #06B8E0;
 }
 
 .App-logo {
@@ -15,9 +10,9 @@
 .App-header {
   display: grid;
   grid-template-columns: 50px auto;
-  background-color: #3B4747;
-  height: 36px;
-  padding: 5px 10px 5px 16px;
+  background-color: #002D37;
+  height: 40px;
+  padding: 5px 20px;
   color: white;
 }
 
