--- a/client/src/components/Components.css
+++ b/client/src/components/Components.css
@@ -20,38 +20,39 @@ input {
     display: block;
     border: 2px solid #233232;
     border-radius: 4px;
-    line-height: 28px;
+    line-height: 22px;
 }
 
 input:focus {
     border: 2px solid #06B8E0;
 }
 
-.Test-case-header {
-    font-size: 1.2rem;
-    font-weight: bold;
-    line-height: 28px;
+.Test-case-header, .Test-case, .Comment, .Tag {
+    font-size: 1rem;
+    line-height: 22px;
     text-align: left;
 }
 
+.Test-case-header {
+    font-weight: bold;
+}
+
 .Test-case {
-    font-size: 1.2rem;
-    margin-left: 56px;
+    margin-left: 20px;
     text-align: left;
 }
 
 .Comment {
-    font-size: 1.2rem;
     color: grey;
-    margin-left: 56px;
-    text-align: left;
-}
-
-input .Test-case-header, input .Test-case, input .Comment {
-    margin: auto;
+    margin-left: 20px;
 }
 
 .Tag {
     text-transform: uppercase;
     text-align: right;
 }
+
+input .Test-case-header, input .Test-case, input .Comment {
+    margin: auto;
+}
+
