--- a/client/src/display/Display.css
+++ b/client/src/display/Display.css
@@ -1,13 +1,15 @@
-.Row {
-    display: grid;
+.Test-cases {
     width: 90%;
     margin: auto;
-    margin-top: -1px;
-    padding: 0px 22px;
-    grid-template: 22px / 22px 22px auto;
+}
+
+.Row {
+    width: 100%;
+    display: grid;
+    margin: auto;
+    margin-top: 1px;
+    grid-template: 22px / auto 22px 22px;
     background: white;
-    border: 1px solid #CCCCCC;
-    border-radius: 4px;
     box-sizing: border-box;
 }
 
