--- a/client/src/components/Components.css
+++ b/client/src/components/Components.css
@@ -13,18 +13,6 @@ h3 span {
     font-weight: 300;
 }
 
-.input-row {
-    width: 100%;
-    min-width: 500px;
-    margin: auto;
-    margin-top: 1px;
-    display: block;
-    border-radius: 4px;
-    height: 22px;
-    background: white;
-    box-sizing: border-box;
-}
-
 .Row {
     width: 100%;
     display: grid;
@@ -41,6 +29,11 @@ input {
     padding: 0px;
     padding-left: 20px;
     box-sizing: border-box;
+}
+
+input::placeholder {
+    color: #CCCCCC;
+    font-style: italic;
 }
 
 input:hover {
