--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
   height: 40px;
   padding: 5px 20px;
   color: white;
-  box-shadow: 0px 2px 5px grey;
+  box-shadow: 0px 2px 5px #CCCCCC;
 }
 
 .App-title {
