Updated to light theme

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
 .App-header {
   display: grid;
   grid-template-columns: 50px auto;
-  background: #005B70;
+  background: #ffffff;
   height: 40px;
   padding: 5px 20px;
   color: white;
