--- a/client/src/display/Display.css
+++ b/client/src/display/Display.css
@@ -7,7 +7,7 @@
     display: grid;
     margin: auto;
     margin-top: 1px;
-    grid-template: 22px / auto 22px 22px;
+    grid-template: 24px / auto 24px 24px;
     background: white;
     box-sizing: border-box;
     box-shadow: 2px 2px 5px #CCCCCC;
@@ -15,7 +15,7 @@
 }
 
 .Row-id {
-    line-height: 22px;
+    line-height: 24px;
     text-align: right;
 }
 
@@ -57,12 +57,11 @@ input {
     margin-left: 4px;
     width: 100%;
     border: none;
-    line-height: 22px;
+    line-height: 24px;
     padding: 0px;
     padding-left: 20px;
     box-sizing: border-box;
     font-size: 1rem;
-    line-height: 22px;
     text-align: left;
     border-radius: 0px 2px 2px 0px;
 }
@@ -73,14 +72,14 @@ input::placeholder {
 }
 
 input:hover {
-    box-shadow: -4px 0px 0px #4B6DE9;
+    box-shadow: -4px 0px 0px rgba(75, 109, 233, 0.5);
 }
 
 input:focus {
-    height:22px;
+    height:24px;
     outline: none;
     box-sizing: border-box;
-    box-shadow: -4px 0px 0px #071F79, 2px 2px 5px #cccccc;
+    box-shadow: -4px 0px 0px rgb(75, 109, 233), 2px 2px 10px #CCCCCC;
     background-color: #F6F7FE;
     position: relative;
     z-index: 1;
