--- a/client/src/display/Display.css
+++ b/client/src/display/Display.css
@@ -7,11 +7,18 @@
     display: grid;
     margin: auto;
     margin-top: 1px;
-    grid-template: 24px / auto 24px 24px;
+    grid-template: 24px / auto 24px 24px 24px;
     background: white;
     box-sizing: border-box;
     box-shadow: 2px 2px 5px #CCCCCC;
     border-radius: 2px;
+}
+
+.Row:focus-within {
+    box-shadow: 2px 2px 10px #CCCCCC;
+    background-color: #F6F7FE;
+    position: relative;
+    z-index: 1;
 }
 
 .Row-id {
@@ -79,9 +86,7 @@ input:focus {
     height:24px;
     outline: none;
     box-sizing: border-box;
-    box-shadow: -4px 0px 0px rgb(75, 109, 233), 2px 2px 10px #CCCCCC;
+    box-shadow: -4px 0px 0px rgb(75, 109, 233);
     background-color: #F6F7FE;
-    position: relative;
-    z-index: 1;
 }
 
