--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,9 +12,11 @@
   grid-template-columns: 50px auto;
   background: #ffffff;
   height: 40px;
+  min-width: 100%;
   padding: 0px 20px;
   color: white;
   box-shadow: 0px 2px 5px #CCCCCC;
+  position: absolute;
 }
 
 .App-title {
