--- a/client/src/display/Display.css
+++ b/client/src/display/Display.css
@@ -1,5 +1,39 @@
-.Test-cases {
-    margin: 40px;
+.Main-container {
+    display: flex;
+    position: absolute;
+    min-height: 100%;
+    width: 100%
+}
+
+.Test-case-list-container {
+    width: 50%;
+    padding: 60px 1px 20px 40px;
+}
+
+.Detail-pane-container {
+    min-height: 100%;
+    width: 50%;
+    padding: 60px 40px 20px 1px;
+}
+
+.Detail-pane {
+    min-height: 100%;
+    background: #F6F7FE;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 5px #CCCCCC;
+    border-radius: 5px;
+    z-index: 2;
+}
+
+.Detail-pane-header {
+    padding: 20px 30px;
+}
+
+.Detail-pane-header h1 {
+    margin: 0px;
+    padding: 0px 0px 10px 0px;
+    font-size: 1.2rem;
+    border-bottom: 2px solid rgb(75, 109, 233);
 }
 
 .Row {
@@ -15,10 +49,10 @@
 }
 
 .Row:focus-within {
-    box-shadow: 2px 2px 10px #CCCCCC;
+    box-shadow: 20px 0px 0px #F6F7FE, 2px 2px 10px #CCCCCC;
     background-color: #F6F7FE;
     position: relative;
-    z-index: 1;
+    z-index: 13;
 }
 
 .Row-id {
