--- a/client/src/Display.css
+++ b/client/src/Display.css
@@ -36,6 +36,10 @@
     border-bottom: 2px solid rgb(75, 109, 233);
 }
 
+.Detail-pane-container p {
+    font-size: 0.8rem;
+}
+
 .Row {
     width: 100%;
     display: grid;
@@ -48,7 +52,7 @@
     border-radius: 2px;
 }
 
-.Row:focus-within {
+.Row:focus-within, .Selected-row {
     box-shadow: 20px 0px 0px #F6F7FE, 2px 2px 10px #CCCCCC;
     background-color: #F6F7FE;
     position: relative;
@@ -114,11 +118,11 @@ input::placeholder {
     font-style: italic;
 }
 
-input:hover {
+input:hover{
     box-shadow: -4px 0px 0px rgba(75, 109, 233, 0.5);
 }
 
-input:focus {
+input:focus, .Selected-input{
     height:24px;
     outline: none;
     box-sizing: border-box;
