--- a/client/src/support/App.css
+++ b/client/src/support/App.css
@@ -29,3 +29,10 @@
   text-align: center;
   font-size: 1.1em;
 }
+
+.Main-container {
+  display: flex;
+  position: absolute;
+  min-height: 100%;
+  width: 100%
+}
