--- a/client/src/support/DetailPane.css
+++ b/client/src/support/DetailPane.css
@@ -23,10 +23,11 @@
 }
 
 .Detail-pane-header {
-    padding: 20px 30px;
+    margin: 20px 30px;
 }
 
 .Detail-pane-header h1 {
+    min-height: 26px;
     margin: 0px;
     padding: 0px 0px 10px 0px;
     font-size: 1.2rem;
