now using generated key instead of mongodb _id

--- a/client/src/support/DetailPane.css
+++ b/client/src/support/DetailPane.css
@@ -70,7 +70,7 @@ button:active {
     background: #39A223;
 }
 
-.Debug-id {
+.Debug-key {
     color: lightgray;
     font-size: 0.6rem;
     text-align: right;
