updated styling to more closely match UI

--- a/client/src/support/DetailPane.css
+++ b/client/src/support/DetailPane.css
@@ -1,7 +1,8 @@
 .Label {
     color: #002D37;
     font-weight: 600;
-    margin-top: 5px;
+    margin: 0px 10px 10px 10px;
+    align-self: flex-start;
 }
 
 .Detail-pane-container {
