--- a/client/src/support/Description.css
+++ b/client/src/support/Description.css
@@ -1,13 +1,13 @@
 .Description-container {
-    margin: 20px 20px;
+    margin: 30px 20px;
     display: flex;
-    text-align: center
+    flex-direction: column;
 }
 
 .Description-input {
     flex: 1 1 auto;
     font-size: 0.8rem;
-    margin-left: 10px;
+    margin: 0px 10px;
     background: white;
     border: 1px solid #cccccc;
     border-radius: 5px;
