--- a/client/src/support/Tag.css
+++ b/client/src/support/Tag.css
@@ -1,12 +1,13 @@
 .Tag-list-container {
-    margin: 20px 20px;
+    margin: 30px 20px;
     display: flex;
-    text-align: center;
+    flex-direction: column;
 }
 
 .Tag-list {
-    width: 100%;
-    margin-left: 10px;
+    flex: 1 1 auto;
+    align-self: flex-start;
+    margin: 0px 10px;
     background: white;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
