--- a/client/src/support/DetailPane.css
+++ b/client/src/support/DetailPane.css
@@ -45,9 +45,12 @@
 }
 
 button {
+    border: none;
     float: right;
+    height: 35px;
+    width: 75px;
     margin-top: 10px;
-    padding: 5px 20px;
+    padding: 0px 20px;
     color: white;
     border-radius: 4px;
     box-shadow: 0px 2px 5px #CCCCCC;
