--- a/client/src/support/TestCaseList.css
+++ b/client/src/support/TestCaseList.css
@@ -62,6 +62,22 @@
     cursor: text;
 }
 
+.Test-case-saving, .Test-case-saving:focus {
+    animation: test-case-saving 2s infinite linear;
+}
+
+@keyframes test-case-saving {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .Delete-row {
     color: #4B6DE9;
     opacity: 0.4;
