--- a/client/src/support/Description.css
+++ b/client/src/support/Description.css
@@ -12,6 +12,7 @@
     border: 1px solid #cccccc;
     border-radius: 5px;
     padding: 5px;
+    transition: 0.2s linear;
 }
 
 .Description-input::placeholder {
