--- a/client/src/support/Step.css
+++ b/client/src/support/Step.css
@@ -29,6 +29,7 @@
     margin: 2px 5px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
+    transition: 0.2s linear;
 }
 
 .Delete-step {
@@ -63,6 +64,7 @@
     margin: 5px 25px 5px 0px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
+    transition: 0.1s linear;
 }
 
 .Step-input:disabled {
