--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -93,10 +93,10 @@
   }
 }
 
-.Test-case-saving, .Test-case-saving:focus {
-  animation: test-case-saving 2s infinite linear;
+.Test-case-disabled, .Test-case-disabled:focus {
+  animation: test-case-disabled 2s infinite linear;
 }
-@keyframes test-case-saving {
+@keyframes test-case-disabled {
   0% {
       opacity: 1;
   }
