--- a/client/src/styles/Step.css
+++ b/client/src/styles/Step.css
@@ -64,7 +64,7 @@
     margin: 5px 25px 5px 0px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
-    transition: 0.1s linear;
+    transition: 0.2s linear;
 }
 
 .Step-input:disabled {
@@ -77,9 +77,10 @@
     height: 20px;
     padding: 0px 5px;
     border: none;
+    transition: 0.2s linear;
 }
 
-.Step-edit:disabled {
+.Step:disabled, .Step-edit:disabled {
     background-color: #EEEEEE;
 }
 
