--- a/client/src/styles/TestCaseList.css
+++ b/client/src/styles/TestCaseList.css
@@ -24,6 +24,10 @@
     z-index: 13;
 }
 
+.Hover-over {
+    border-top: 24px solid yellow;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 * {
