--- a/client/src/styles/TestCaseList.css
+++ b/client/src/styles/TestCaseList.css
@@ -25,7 +25,7 @@
 }
 
 .Hover-over {
-    border-top: 24px solid yellow;
+    border-top: 25px solid #ECF2F5;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Nunito');
