Removed unnecessary styling, fixed scrolling behaviour

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -35,9 +35,7 @@
 
 .Main-container {
   display: flex;
-  position: absolute;
-  min-height: 100%;
-  width: 100%;
+  overflow: hidden;
 }
 
 .Disabled {
