--- a/client/src/styles/DetailPane.css
+++ b/client/src/styles/DetailPane.css
@@ -6,20 +6,21 @@
 }
 
 .Detail-pane-container {
-    min-height: 100%;
+    height: calc(100vh - 80px);
     width: 50%;
     padding: 60px 40px 20px 1px;
 }
 
 .Detail-pane {
-    display:flex;
+    height: 100%;
+    display: flex;
     flex-direction: column;
     align-content: flex-start;
     min-height: 100%;
     background: #F6F7FE;
-    box-sizing: border-box;
     box-shadow: 2px 2px 5px #CCCCCC;
     border-radius: 5px;
+    margin-bottom: 20px;
     z-index: 2;
 }
 
@@ -34,9 +35,9 @@
     font-size: 1.2rem;
     border-bottom: 2px solid #071F79;
 }
-
 .Detail-pane-body {
-    flex: 1 1 auto;
+    overflow: auto;
+    height: 100%;
 }
 
 .Detail-pane-footer {
