--- a/client/src/styles/TestCaseList.css
+++ b/client/src/styles/TestCaseList.css
@@ -1,5 +1,7 @@
 
 .Test-case-list-container {
+    height: calc(100vh - 80px);
+    overflow: auto;
     width: 50%;
     padding: 60px 1px 20px 40px;
 }
