add basic test for a single test case

--- a/client/src/styles/Step.css
+++ b/client/src/styles/Step.css
@@ -56,6 +56,8 @@
 }
 
 .Step-input {
+    resize: none;
+    overflow: hidden;
     width: auto;
     font-size: 0.9rem;
     height: 20px;
@@ -72,6 +74,8 @@
 }
 
 .Step-edit {
+    resize: none;
+    overflow: hidden;
     width: auto;
     font-size: 0.9rem;
     height: 20px;
